--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>
         web tasarımı ilkeleri dersi
     </title>
+    web tasarımı ilkeleri dersi uygulaması
     <body>
         <h1>
             City Lights 
