--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
         <h1>
             City Lights 
         </h1>
-<p>
-    A lighthearted comedy about homelessness, suicide, disability, manic depression, substance abuse, handguns, bipolar disorder, drunk driving, robbery, rheumatic fever, and incarceration.
+            <i>chaplin sineması</i>
+            <br>
+            <small>city lights,modern times etc.</small>
+            <p><abbr title="letterdboxd"> LB </abbr></p>
+            <blockquote> A lighthearted <del>comedy</del>  about homelessness,<ins>suicide</ins>, disability,<sub>x15</sub> manic depression <sup>12</sup>
+            , substance abuse, handguns,<mark> bipolar disorder></mark>, <b> drunk driving</b>, robbery, rheumatic fever, and incarceration.
 
-    Ladies and gentlemen.....the 1930s!
-</p>
-<a href="https://letterboxd.com/film/city-lights">letterboxd</a>
-<img src="indir.jpg" alt="poster" width="250" height="300"
-    </body>
+            Ladies and gentlemen.....the 1930s!<br>
+            <q>A tramp falls in love with a beautiful blind flower girl. 
+                His on-and-off friendship with a wealthy man allows him to be the girl’s benefactor and suitor.</q>
+            </blockquote>
+    <a href="https://letterboxd.com/film/city-lights">letterboxd</a>
+    <img src="indir.jpg" alt="poster" width="250" height="300">
+</body>
+   
 </html>
