--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>
-        web tasarımı ilkeleri dersi
+        web tasarımı ilkeleri dersi test
     </title>
     web tasarımı ilkeleri dersi uygulaması
     <body>
