--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </blockquote>
     <a href="https://letterboxd.com/film/city-lights">letterboxd</a>
     <img src="indir.jpg" alt="poster" width="250" height="300">
+    <h1 style="border:5px solid rgb(71, 255, 80);">düşünelim, tartışalım</h1>
+    <h1 style="background-color:rgba(243, 255, 71, 0.658);">neden chaplin'i sevmiyorum?</h1>
+    <p style="color:chocolate;">pedo</p>
+    <h3 style="color:darkred;">mükemmeliyetçiliği ile set çalışanlarına zulüm ediyor</h3>
+    <h3 style="text-align:center; font-size:x-large;font-family:sans-serif; color:aqua">overrated </h3>
 </body>
-   
+ 
 </html>
